// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar ナビゲーションバーを閉じる 1`] = `
"<div>
  <div class=\\"nav-bar\\">
    <div class=\\"nav-bar__box\\">
      <div><a href=\\"/\\" class=\\"nav-logo\\">ダミーロゴ</a></div>
      <div><button class=\\"base-btn base-btn--none\\">
          <div>
            <div class=\\"nav-icon\\"><span class=\\"nav-icon__top nav-icon__top--close\\"></span> <span class=\\"nav-icon__middle\\"></span> <span class=\\"nav-icon__bottom nav-icon__bottom--close\\"></span></div>
          </div>
        </button></div>
    </div>
  </div>
</div>"
`;

exports[`NavBar ナビゲーションバーを開く 1`] = `
"<div>
  <div class=\\"nav-bar\\">
    <div class=\\"nav-bar__box\\">
      <div><a href=\\"/\\" class=\\"nav-logo\\">ダミーロゴ</a></div>
      <div><button class=\\"base-btn base-btn--none\\">
          <div>
            <div class=\\"nav-icon\\"><span class=\\"nav-icon__top nav-icon__top--open\\"></span> <span class=\\"nav-icon__middle nav-icon__middle--fade\\"></span> <span class=\\"nav-icon__bottom nav-icon__bottom--open\\"></span></div>
          </div>
        </button></div>
    </div>
  </div>
</div>"
`;
